src/styles.css
/* You can add global styles to this file, and also import other style files */
body {
    background: url("./assets/library-background.jpg") no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    overflow: hidden;
    height: 100%;
}
html { 
    height: 100%;
}

.scroll-wrapper {
    overflow: scroll; height: 100%;
}

